// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <IconFavoriteFillSvg /> component Test <IconFavoriteFillSvg /> with props should correct render component with props 1`] = `
<span
  className="testContainer"
>
  <svg
    height="100%"
    viewBox="0 0 24 24"
    width="100%"
  >
    <path
      className="testPath"
      d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
    />
  </svg>
</span>
`;

exports[`Test <IconFavoriteFillSvg /> component Test <IconFavoriteFillSvg /> without props should correct render component without props 1`] = `
<span
  className="container"
>
  <svg
    height="100%"
    viewBox="0 0 24 24"
    width="100%"
  >
    <path
      className="path"
      d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
    />
  </svg>
</span>
`;
